plugins {
    id 'tapestry.junit5-spock-convention'
}

description = 'Test suite for making sure Tapestry runs on latest Java'

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}


dependencies {
    testImplementation project(':tapestry-ioc')
}
